fix(tooltip): fix tooltip misalignment
fix #24

--- a/src/styles/tailwind/components.scss
+++ b/src/styles/tailwind/components.scss
@@ -1,14 +1,13 @@
-@tailwind components;
-
 @layer components {
   .button-group {
     @apply text-base font-bold flex rounded-lg bg-slate-100 dark:bg-slate-800;
-  }
-  .button-group button {
-    @apply min-w-[64px] rounded-lg px-3 py-0.5;
-  }
-  .button-group button.active {
-    @apply bg-emerald-500 dark:bg-emerald-400 text-white dark:text-slate-900;
+
+    button {
+      @apply min-w-[64px] rounded-lg px-3 py-0.5;
+    }
+    button.active {
+      @apply bg-emerald-500 dark:bg-emerald-400 text-white dark:text-slate-900;
+    }
   }
 
   .button--default,
